figured out how to get phone number from message and successfully connect to firebase from pythonanywhere

--- a/flight_advisor.ipynb
+++ b/flight_advisor.ipynb
@@ -21,12 +21,16 @@
    "source": [
     "import firebase_admin\n",
     "from firebase_admin import credentials\n",
+    "from firebase_admin import db\n",
     "\n",
     "cred = credentials.Certificate(\"flight_advisor.json\")\n",
     "\n",
     "default_app = firebase_admin.initialize_app(cred, {\n",
     "    'databaseURL':'https://mymillieassistant-default-rtdb.firebaseio.com/'\n",
     "    })\n",
+    "\n",
+    "ref = db.reference(\"users\")\n",
+    "ref.set({'abc':'test'})\n",
     "\n"
    ]
   },
